# dsdiff

./: CHANGELOG.md  Dockerfile  README.md  pyproject.toml
src/dsdiff/: __init__.py  __main__.py  cli.py  compare.py  dataset.py  drift.py  profile.py  render.py
tests/: test_cli.py  test_compare.py  test_dataset.py  test_drift.py  test_profile.py
