[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dsdiff"
version = "0.2.0"
description = "Diff two dataset files: schema changes plus column-level distribution drift."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "José del Río" }]
keywords = ["data", "dataset", "drift", "psi", "schema", "diff", "mlops", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "polars>=1.0",
    "numpy>=1.24",
]

[project.urls]
Homepage = "https://github.com/jmweb-org/dsdiff"
Repository = "https://github.com/jmweb-org/dsdiff"
Issues = "https://github.com/jmweb-org/dsdiff/issues"

[project.scripts]
dsdiff = "dsdiff.cli:entrypoint"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dsdiff"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S", "C4", "RUF"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.coverage.run]
source = ["dsdiff"]
branch = true
